# fartcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  README_fa_IR.md  README_pt_BR.md  README_zh_CN.md  RELEASE_NOTES_0.9.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build_msvc/: common.init.vcxproj
contrib/: README.md  bitcoind.bash-completion  fartcoin-cli.bash-completion  fartcoin-qt.pro  fartcoin-tx.bash-completion  fartcoind.bash-completion  gitian-build.py  gitian-build.sh  install_db4.sh  install_db5.sh  tidy_datadir.sh
doc/: Doxyfile  (+48 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  auxpow.cpp  auxpow.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockreward.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  core.h  fartcoin-cli-res.rc  fartcoin-cli.cpp  fartcoin-fees.cpp  fartcoin-fees.h  fartcoin.cpp  fartcoin.h  fartcoind-res.rc  fartcoind.cpp  hash.cpp  httpserver.cpp  init.cpp  (+53 more)
src/bench/: .gitignore  checkblock.cpp
src/compat/: arm_acle_selector.h  assumptions.h  glibc_compat.cpp
src/consensus/: consensus.h  params.h
src/crypto/: hmac_sha256.h  sha1.cpp  sha256.cpp  sha512.cpp
src/crypto/ctaes/: test.c
src/libmw/: README.md
src/libmw/include/mw/exceptions/: CryptoException.h  DatabaseException.h  DeserializationException.h  FARTException.h  FileException.h  InsufficientFundsException.h  NotFoundException.h  ValidationException.h
src/libmw/test/tests/consensus/: Test_Aggregation.cpp  Test_KernelSumValidator.cpp  Test_StealthSumValidator.cpp  Test_Weight.cpp
src/libmw/test/tests/crypto/: Test_AddCommitments.cpp  Test_AggSig.cpp  Test_Keys.cpp  Test_RangeProofs.cpp
src/libmw/test/tests/db/: Test_LeafDB.cpp
src/libmw/test/tests/mmr/: Test_Index.cpp  Test_LeafIndex.cpp  Test_LeafSet.cpp  Test_LeafSetCache.cpp  Test_MMR.cpp  Test_MMRUtil.cpp  Test_PruneList.cpp
src/libmw/test/tests/models/block/: Test_Block.cpp  Test_Header.cpp
src/libmw/test/tests/models/crypto/: Test_BigInteger.cpp
src/libmw/test/tests/models/tx/: Test_Input.cpp  Test_Kernel.cpp  Test_Output.cpp  Test_PegInCoin.cpp  Test_PegOutCoin.cpp  Test_Transaction.cpp  Test_TxBody.cpp  Test_UTXO.cpp
src/libmw/test/tests/node/: Test_BlockBuilder.cpp  Test_BlockValidator.cpp  Test_MineChain.cpp  Test_Reorg.cpp
src/libmw/test/tests/wallet/: Test_Keychain.cpp
src/m4/: bitcoin_qt.m4
src/mweb/: mweb_models.h  mweb_policy.cpp  mweb_transact.cpp  mweb_transact.h
src/policy/: feerate.cpp  feerate.h  policy.cpp  policy.h
src/primitives/: pureheader.h  transaction.h
src/qt/: Makefile.am  README.md  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  fartcoin.qrc  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  modaloverlay.cpp  networkstyle.cpp  notificator.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentserver.cpp  paymentserver.h  (+29 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  receiverequestdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_AT.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  (+51 more)
src/qt/res/: bitcoin-qt-res.rc  fartcoin-qt-res.rc
src/qt/res/icons/: bitcoin.icns  bitcoin_testnet.icns  fartcoin.icns
src/qt/test/: Makefile.am  addressbooktests.cpp  bitcoinunitstests.cpp  paymentservertests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  server.cpp  server.h  util.cpp
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: lockedpool.cpp
src/test/: Makefile.am  README.md  addrman_tests.cpp  amount_tests.cpp  auxpow_tests.cpp  crypto_tests.cpp  fartcoin_tests.cpp  getarg_tests.cpp  hash_tests.cpp  main.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  pow_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  util_tests.cpp  versionbits_tests.cpp  wallet_tests.cpp
src/test/data/: README.md  bitcoin-util-test.json  blockfilters.json  key_io_invalid.json  script_tests.json  sighash.json
src/util/: message.cpp  system.cpp
src/wallet/: coincontrol.h  coinselection.cpp  coinselection.h  feebumper.cpp  rpcdump.cpp  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  txassembler.cpp  txassembler.h  txlist.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqpublishnotifier.cpp
(+273 files in other folders)
